--- a/Secret of Castle/Level/level1.xaml
+++ b/Secret of Castle/Level/level1.xaml
@@ -1,19 +1,13 @@
-﻿<Window x:Class="Secret_of_Castle.Level.level1"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Secret_of_Castle.Level"
-        mc:Ignorable="d"
+﻿<Window x:Name="Game1" x:Class="Secret_of_Castle.level1" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:Secret_of_Castle"
         Title="Secret Of Castle Game" Height="1080" Width="1920" WindowState="Maximized" WindowStyle="None"  Icon="/Icon.jpeg" KeyUp="kbup" KeyDown="kbdown" >
     <Viewbox Stretch="Fill">
-        <Canvas x:Name="CanvasGame" Height="1080" Width="1920" Focusable="True">
+        <Canvas x:Name="CanvasGame"  Height="1080" Width="1920">
             <Canvas.Background>
                 <ImageBrush ImageSource="/Texture/background/Level/game_background_1.png"/>
             </Canvas.Background>
-            <Rectangle x:Name="Portal" Height="172" Canvas.Left="1646" Stroke="Black" Canvas.Top="834" Width="219" HorizontalAlignment="Left" VerticalAlignment="Top" Fill="Black"/>
+            <Rectangle x:Name="Portal" Height="172" Canvas.Left="1646" Stroke="Black" Canvas.Top="834" Width="219" HorizontalAlignment="Left" VerticalAlignment="Top" Fill="Black" Visibility="Hidden"/>
             <Image Height="100" Canvas.Left="1551" Source="/Texture/UI/Game/HP/icon_hp.png" Stretch="Fill" Canvas.Top="16" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <ProgressBar x:Name="hp_bar" Height="18" Canvas.Left="1664" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center" Value="100" BorderBrush="{x:Null}" Background="#FFA19D9D" Foreground="#FF6BFF00"/>
+            <ProgressBar x:Name="hp_bar" Height="18" Canvas.Left="1664" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center" Value="100" Background="#FFA19D9D" Foreground="#FF6BFF00" Maximum="1000"/>
             <Image x:Name="player" Height="174" Canvas.Left="149" Canvas.Top="466" Width="165" Source="/Texture/Mob/Player/player_move_animation/Right/PlayerMoveRightAnimation1.png" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="Fill"/>
         </Canvas>
     </Viewbox>
