--- a/Secret of Castle/App.xaml
+++ b/Secret of Castle/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Secret_of_Castle"
-             StartupUri="Level/level1.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <FontFamily x:Key="CustomFont">pack://application:,,,/font/en.ttf</FontFamily>
     </Application.Resources>
