--- a/Secret of Castle/Game.xaml
+++ b/Secret of Castle/Game.xaml
@@ -31,6 +31,8 @@
                     <ImageBrush ImageSource="/Texture/Objects/Door_Left.png"/>
                 </Rectangle.Fill>
             </Rectangle>
+            <Label x:Name="MannaLB" Content="10" Canvas.Left="156" Canvas.Top="48" Height="38" Width="58" Foreground="White" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <Label x:Name="TextManna" Content="Манна:" Canvas.Left="75" Canvas.Top="47" Foreground="White" FontSize="20" FontWeight="Bold"/>
         </Canvas>
     </Viewbox>
 </Window>
