--- a/Secret of Castle/Level/level1.xaml
+++ b/Secret of Castle/Level/level1.xaml
@@ -3,11 +3,11 @@
     <Viewbox Stretch="Fill">
         <Canvas x:Name="CanvasGame"  Height="1080" Width="1920">
             <Canvas.Background>
-                <ImageBrush ImageSource="/Texture/background/Level/game_background_1.png"/>
+                <ImageBrush ImageSource="/Texture/background/Level/game_background_3.png"/>
             </Canvas.Background>
-            <Rectangle x:Name="Portal" Height="166" Canvas.Left="875" Canvas.Top="57" Width="170">
+            <Rectangle x:Name="Portal" Height="197" Canvas.Left="1760" Canvas.Top="426" Width="170" HorizontalAlignment="Center" VerticalAlignment="Top">
                 <Rectangle.Fill>
-                    <ImageBrush ImageSource="/Texture/Objects/Door.png"/>
+                    <ImageBrush ImageSource="/Texture/Objects/Door_Right.png"/>
                 </Rectangle.Fill>
             </Rectangle>
             <Image Height="100" Canvas.Left="1551" Source="/Texture/UI/Game/HP/icon_hp.png" Stretch="Fill" Canvas.Top="16" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
