--- a/Secret of Castle/Game.xaml
+++ b/Secret of Castle/Game.xaml
@@ -13,8 +13,8 @@
                 <Canvas.Background>
                     <ImageBrush ImageSource="/Texture/UI/Menu_background.png"/>
                 </Canvas.Background>
-                <Button x:Name="Play_Button" Content="Продолжить" HorizontalAlignment="Left" Margin="876,330,0,0" VerticalAlignment="Top" Height="77" Width="220" Click="Play_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold"/>
-                <Button x:Name="Exit_Button" Content="Выйти" HorizontalAlignment="Left" Margin="860,667,0,0" VerticalAlignment="Top" Height="83" Width="256" Click="Exit_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold"/>
+                <Button x:Name="Play_Button" Content="Продолжить" HorizontalAlignment="Center" VerticalAlignment="Top" Height="77" Width="220" Click="Play_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold" Canvas.Left="876" Canvas.Top="557"/>
+                <Button x:Name="Exit_Button" Content="Выйти" HorizontalAlignment="Center" VerticalAlignment="Top" Height="83" Width="256" Click="Exit_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold" Canvas.Left="858" Canvas.Top="785"/>
             </Canvas>
             <Rectangle x:Name="Portal" Height="166" Canvas.Left="875" Canvas.Top="57" Width="170">
                 <Rectangle.Fill>
@@ -33,6 +33,13 @@
             </Rectangle>
             <Label x:Name="MannaLB" Content="10" Canvas.Left="156" Canvas.Top="48" Height="38" Width="58" Foreground="White" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <Label x:Name="TextManna" Content="Манна:" Canvas.Left="75" Canvas.Top="47" Foreground="White" FontSize="20" FontWeight="Bold"/>
+            <Canvas x:Name="LoseCanvas" Height="1080" Width="1920" Visibility="Hidden">
+                <Canvas.Background>
+                    <ImageBrush ImageSource="/Texture/background/Lose_Game.png"/>
+                </Canvas.Background>
+
+                <Button x:Name="Exit" Content="Выйти из игры" HorizontalAlignment="Center" VerticalAlignment="Top" Height="84" Width="256" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold" Canvas.Left="832" Canvas.Top="456" Click="Exit_Click"/>
+            </Canvas>
         </Canvas>
     </Viewbox>
 </Window>
