--- a/Secret of Castle/Level/level4.xaml
+++ b/Secret of Castle/Level/level4.xaml
@@ -1,21 +1,14 @@
-﻿<Window x:Name="Game1" x:Class="Secret_of_Castle.levelbossdragon"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:Secret_of_Castle"
-        Title="Secret Of Castle Game" Height="1080" Width="1920" WindowState="Maximized" WindowStyle="None"  Icon="/Icon.jpeg" KeyUp="kbup" KeyDown="kbdown" >
+﻿<Window x:Class="Secret_of_Castle.level4" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:Secret_of_Castle"
+        Title="Secret Of Castle Game" Height="1080" Width="1920" WindowState="Maximized" WindowStyle="None"  Icon="/Icon.jpeg" KeyUp="kbup" KeyDown="kbdown">
     <Viewbox Stretch="Fill">
         <Canvas x:Name="CanvasGame"  Height="1080" Width="1920">
             <Canvas.Background>
-                <ImageBrush ImageSource="/Texture/background/Level/game_background_1.png"/>
+                <ImageBrush ImageSource="/Texture/background/Level/game_background_4.png"/>
             </Canvas.Background>
-            <Rectangle x:Name="Portal" Height="187" Canvas.Left="864" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center">
-                <Rectangle.Fill>
-                    <ImageBrush ImageSource="/Texture/Objects/Dragon_Door.png"/>
-                </Rectangle.Fill>
-            </Rectangle>
             <Image Height="100" Canvas.Left="1551" Source="/Texture/UI/Game/HP/icon_hp.png" Stretch="Fill" Canvas.Top="16" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <ProgressBar x:Name="hp_bar" Height="18" Canvas.Left="1664" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center" Value="100" Background="#FFA19D9D" Foreground="#FF6BFF00" Maximum="1000"/>
-            <Image x:Name="player" Height="174" Canvas.Left="149" Canvas.Top="466" Width="165" Source="/Texture/Mob/Player/player_move_animation/Right/PlayerMoveRightAnimation1.png" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="Fill"/>
+            <Image x:Name="player" Height="174" Canvas.Left="886" Canvas.Top="842" Width="164" Source="/Texture/Mob/Player/player_move_animation/Right/PlayerMoveRightAnimation1.png" HorizontalAlignment="Left" VerticalAlignment="Top" Stretch="Fill"/>
+
             <Canvas x:Name="PauseCanvas" Height="1080" Width="1920" Visibility="Hidden">
                 <Canvas.Background>
                     <ImageBrush ImageSource="/Texture/UI/Menu_background.png"/>
@@ -23,9 +16,18 @@
                 <Button x:Name="Play_Button" Content="Продолжить" HorizontalAlignment="Center" VerticalAlignment="Top" Height="77" Width="220" Click="Play_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold" Canvas.Left="876" Canvas.Top="557"/>
                 <Button x:Name="Exit_Button" Content="Выйти" HorizontalAlignment="Center" VerticalAlignment="Top" Height="83" Width="256" Click="Exit_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold" Canvas.Left="858" Canvas.Top="785"/>
             </Canvas>
+            <Rectangle x:Name="Portal1" Height="166" Canvas.Left="875" Canvas.Top="57" Width="170">
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="/Texture/Objects/Door.png"/>
+                </Rectangle.Fill>
+            </Rectangle>
+            <Rectangle x:Name="Portal" Height="152" Canvas.Left="1770" Canvas.Top="464" Width="150">
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="/Texture/Objects/Door_Right.png"/>
+                </Rectangle.Fill>
+            </Rectangle>
             <Label x:Name="MannaLB" Content="10" Canvas.Left="156" Canvas.Top="48" Height="38" Width="58" Foreground="White" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <Label x:Name="TextManna" Content="Манна:" Canvas.Left="75" Canvas.Top="47" Foreground="White" FontSize="20" FontWeight="Bold"/>
-            <ProgressBar x:Name="DragonHPBar" Height="21" Canvas.Left="59" Canvas.Top="1006" Width="1802" HorizontalAlignment="Left" VerticalAlignment="Center" Value="5000" Background="#FFA19D9D" Foreground="#FF6BFF00" Maximum="5000"/>
             <Canvas x:Name="LoseCanvas" Height="1080" Width="1920" Visibility="Hidden">
                 <Canvas.Background>
                     <ImageBrush ImageSource="/Texture/background/Lose_Game.png"/>
