--- a/Secret of Castle/Level/levelmadscientist.xaml
+++ b/Secret of Castle/Level/levelmadscientist.xaml
@@ -8,7 +8,11 @@
             <Canvas.Background>
                 <ImageBrush ImageSource="/Texture/background/Level/game_background_1.png"/>
             </Canvas.Background>
-            <Rectangle x:Name="Portal" Height="172" Canvas.Left="1646" Stroke="Black" Canvas.Top="834" Width="219" HorizontalAlignment="Left" VerticalAlignment="Top" Fill="Black" Visibility="Hidden"/>
+            <Rectangle x:Name="Portal" Height="210" Canvas.Left="852" Canvas.Top="16" Width="216">
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="/Texture/Objects/Smart_Door.png"/>
+                </Rectangle.Fill>
+            </Rectangle>
             <Image Height="100" Canvas.Left="1551" Source="/Texture/UI/Game/HP/icon_hp.png" Stretch="Fill" Canvas.Top="16" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <ProgressBar x:Name="hp_bar" Height="18" Canvas.Left="1664" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center" Value="100" Background="#FFA19D9D" Foreground="#FF6BFF00" Maximum="1000"/>
             <Image x:Name="player" Height="174" Canvas.Left="149" Canvas.Top="466" Width="165" Source="/Texture/Mob/Player/player_move_animation/Right/PlayerMoveRightAnimation1.png" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="Fill"/>
@@ -16,10 +20,18 @@
                 <Canvas.Background>
                     <ImageBrush ImageSource="/Texture/UI/Menu_background.png"/>
                 </Canvas.Background>
-                <Button x:Name="Play_Button" Content="Продолжить" HorizontalAlignment="Left" Margin="876,330,0,0" VerticalAlignment="Top" Height="77" Width="220" Click="Play_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold"/>
-                <Button x:Name="Exit_Button" Content="Выйти" HorizontalAlignment="Left" Margin="860,667,0,0" VerticalAlignment="Top" Height="83" Width="256" Click="Exit_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold"/>
+                <Button x:Name="Play_Button" Content="Продолжить" HorizontalAlignment="Center" VerticalAlignment="Top" Height="77" Width="220" Click="Play_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold" Canvas.Left="876" Canvas.Top="557"/>
+                <Button x:Name="Exit_Button" Content="Выйти" HorizontalAlignment="Center" VerticalAlignment="Top" Height="83" Width="256" Click="Exit_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold" Canvas.Left="858" Canvas.Top="785"/>
             </Canvas>
-            <ProgressBar x:Name="ScientistHPBar" Height="21" Canvas.Left="59" Canvas.Top="1006" Width="1802" HorizontalAlignment="Left" VerticalAlignment="Center" Value="5000" Background="#FFA19D9D" Foreground="#FF6BFF00" Maximum="5000"/>
+            <ProgressBar x:Name="ScientistHPBar" Height="21" Canvas.Left="59" Canvas.Top="1006" Width="1802" HorizontalAlignment="Left" VerticalAlignment="Center" Value="1000" Background="#FFA19D9D" Foreground="#FF6BFF00" Maximum="1000"/>
+            <Label x:Name="MannaLB" Content="10" Canvas.Left="156" Canvas.Top="48" Height="38" Width="58" Foreground="White" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <Label x:Name="TextManna" Content="Манна:" Canvas.Left="75" Canvas.Top="47" Foreground="White" FontSize="20" FontWeight="Bold"/>
+            <Canvas x:Name="LoseCanvas" Height="1080" Width="1920" Visibility="Hidden">
+                <Canvas.Background>
+                    <ImageBrush ImageSource="/Texture/background/Lose_Game.png"/>
+                </Canvas.Background>
+                <Button x:Name="Exit" Content="Выйти из игры" HorizontalAlignment="Center" VerticalAlignment="Top" Height="84" Width="256" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold" Canvas.Left="832" Canvas.Top="456" Click="Exit_Click"/>
+            </Canvas>
         </Canvas>
     </Viewbox>
 </Window>
